Fix: Footer text breaks on small screens
See: https://github.com/freifunkhamburg/ffffng/issues/20

--- a/app/styles/views/_footer.scss
+++ b/app/styles/views/_footer.scss
@@ -2,6 +2,9 @@
     position: absolute;
     bottom: 0;
 
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     width: 100%;
 
     margin: 0;
